logout 버튼 및 기능 작성

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     		<div id="headerArea">
 	    		<span id="headerTitleBlick">Blick</span>
 	    		<button id="headerSignUp">Sign up</button>
+	    		<button id="headerLogOut">Log out</button>
 	    	</div>
 	    	
 	    	<div id="bodyArea">
