search box 생성 및 기능 추가

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
 	    				<div id="mainPageHeaderSettings">Settings</div>
 	    			</div>
 	    			<div id="mainPageContentsArea">
+	    				
+	    				<div id="mainPageSearchContainer">
+			            	<input type="search" id="mainPageContentsSearch" placeholder="Type here to search">
+			            </div>
+	            
 	    				<div id="mainPageContentsMyLibrary" class="mainPageContents">
 	    					<div class="mainPageContentsItems">
 	    						<img class="mainPageContentsItemIcon" src="media/img_game_logo1.png" alt="logo" />
