개인정보 수정 부분 보완

--- a/index.html
+++ b/index.html
@@ -155,11 +155,15 @@
                         <div id="infoSettingDescription">Change your information</div>
                     </div>
                     <div id="infoSettingBoxBody">
-                        <h2 class="settingText" id="memberId">ID:</h2><input type="text" class="settingTextBox" id="memberIdBox" disabled>
-                        <h2 class="settingText">PW:</h2><input type="password" class="settingTextBox">
-                        <h2 class="settingText">Address</h2><input type="text" class="settingTextBox">
-                        <h2 class="settingText">E-mail</h2><input type="text" class="settingTextBox">
+                        <h2 class="settingText" id="memberId">ID</h2><input type="text" class="settingTextBox" id="settingBoxID" disabled>
+                        <h2 class="settingText">PW</h2><input type="password" class="settingTextBox" id="settingBoxPW">
+                        <h2 class="settingText">Check</h2><input type="password" class="settingTextBox" id="settingBoxPWCheck">
+		    			<span id="settingBoxPasswordCheckDesc">Checking your password validation</span>
+                        <h2 class="settingText">Address</h2><input type="text" class="settingTextBox" id="settingBoxAddress">
+                        <h2 class="settingText">E-mail</h2><input type="text" class="settingTextBox" id="settingBoxEmail">
+                        <h2 class="settingText">Phone</h2><input type="text" class="settingTextBox" id="settingBoxPhoneNum">
                     </div>
+                    <button id="settingBoxConfirmBtn">Save</button>
                 </div>
                 
 	    	</div>
