하드웨어 설명창 css 조정

--- a/index.html
+++ b/index.html
@@ -99,12 +99,13 @@
 	    				
 	    				<div id="mainPageContentsHWPurchase" class="mainPageContents">
 					    	<div id="descriptionBox">
+					    		<!-- <img id="hwImage" src="media/img_eyetracker_sample.jpeg" alt="logo" /> -->
 					    		<div id="hwImage"></div>
 						    	<div id="hwInfo">
 						    		<div id="hwDescription">
-						    			Name : <br>
-						    			Price : <br>
-						    			Description : <br>
+						    			<span class="hwDescSpans">Name : Eye-Tracker</span>
+						    			<span class="hwDescSpans">Price : 49,900 Won</span>
+						    			<span class="hwDescSpans">Description : It is the DIY glasses which use near-infrared LEDs to illuminate the eye and create a dark pupil effect.</br>It detects and tracks the position of a pupil of the user.</span>
 						    		</div>
 						    		<div id="hwPurchaseButton">
 						    			<a>Purchase ☞</a>
