--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 	    				<div id="contentsPurchasePopup">
 	    					<button id="contentsPurchasePopupClose"></button>
 	    					<img id="contentsPurchasePopupIcon" src="media/img_game_logo1.png" alt="logo" />
-	    					<div id="contentsPurchasePopupTitle">title title title</div>
-	    					<div id="contentsPurchasePopupPrice">price price price</div>
-	    					<div id="contentsPurchasePopupDesc">description description description description</div>
+	    					<div id="contentsPurchasePopupTitle">title</div>
+	    					<div id="contentsPurchasePopupPrice">price</div>
+	    					<div id="contentsPurchasePopupDesc">description</div>
 	    					<button id="contentsPurchasePopupBuyBtn">buy</button>
 	    				</div>
 	    				
@@ -116,7 +116,6 @@
 							
 	    				<div id="mainPageContentsHWPurchase" class="mainPageContents">
 					    	<div id="descriptionBox">
-					    		<!-- <img id="hwImage" src="media/img_eyetracker_sample.jpeg" alt="logo" /> -->
 					    		<div id="hwImage"></div>
 						    	<div id="hwInfo">
 						    		<div id="hwDescription">
