--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Blick Login Page</title>
 
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,900' rel='stylesheet' type='text/css'>
 		<link type="text/css" rel="stylesheet" href="css/index.css" />
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
