--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 		    			<input type="text" id="loginBoxID" placeholder="Blick ID" autofocus>
 		    			<input type="password" id="loginBoxPW" placeholder="Password">
 		    			<button id="loginBoxEnter"></button>
-		    			<div id="loginBoxKeepLogin">
+		    			<!-- <div id="loginBoxKeepLogin">
 			            	<div id="loginBoxKeepLoginCheckBox">
 			            		<div id="loginBoxKeepLoginCheckImg" class="loginCheckImgUnchecked"></div>
 			            	</div>
 			            	<div id="loginBoxKeepLoginDesc">Auto login</div>
-			            </div>    				
+			            </div> -->
 	    			</div>
 	    		</div>
 	    		
@@ -171,9 +171,9 @@
 	    	</div>
 	    	
 	    	<div id="footerArea">
-	    		<span id="footerPrivacy">
+	    		<!-- <span id="footerPrivacy">
 	    			Privacy
-	    		</span>
+	    		</span> -->
 	    		<span id="footerCopyright">
 	    			Copyright @ 2014 Confidence
 	    		</span>
